objects/WW_OppHistory__c.object
<CustomObject><fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>CloseDate__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields><fields>
        <fullName>ExpectedRevenue__c</fullName>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>ForecastCategory__c</fullName>
        <label>To ForecastCategory</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>OpportunityId__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity History</relationshipLabel>
        <relationshipName>Opportunity_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>StageName__c</fullName>
        <label>Stage Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Opportunity History</label><nameField>
        <displayFormat>{0}</displayFormat>
        <label>Opportunity History Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Opportunity History</pluralLabel><sharingModel>ControlledByParent</sharingModel><startsWith>Vowel</startsWith></CustomObject>